[tool.poetry]
name = "keras-time-series"
version = "0.1.0"
description = "Time series analysis playground"
authors = ["Nicolas Spring <springn.ch@gmail.com>"]
readme = "README.md"
packages = [{include = "kts"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
